<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.ResultActivity">

    <include
        android:id="@+id/toolbar_result"
        layout="@layout/toolbar"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="16dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_result">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/title_result"
            android:layout_marginBottom="12dp"
            style="@style/App.TextAppearence.Headline5"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:layout_marginBottom="32dp"
            android:text="@string/subtitle_result"
            style="@style/App.TextAppearence.Subtitle1"/>

        <TextView
            android:id="@+id/result"
            android:layout_width="277dp"
            android:layout_height="277dp"
            android:layout_marginBottom="70dp"
            android:layout_gravity="center"
            android:background="@drawable/result_background"
            android:text="90 item"
            style="@style/App.TextAppearence.Headline4"
            android:gravity="center"/>

        <Button
            android:id="@+id/button_details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:text="@string/button_see_details"/>

        <Button
            android:id="@+id/button_recalculate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_recalculate"
            style="@style/App.Button.Secondary"/>




    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>