<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="20dp"
    tools:context=".view.MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="32dp"
        android:src="@drawable/ic_frame_19"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView">

        <TextView
            style="@style/App.TextAppearence.Headline5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="6dp"
            android:text="@string/welcome_greeting" />

        <TextView
            style="@style/App.TextAppearence.Subtitle1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/first_intro"
            android:textAlignment="center" />

    </LinearLayout>

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="258dp"
        android:layout_height="206dp"
        android:layout_marginStart="57dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="27dp"
        android:scaleType="fitXY"
        android:src="@drawable/ic_undraw_empty_cart_co35"
        app:layout_constraintEnd_toEndOf="@+id/linearLayout"
        app:layout_constraintStart_toStartOf="@+id/linearLayout"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="@+id/imageView2"
        app:layout_constraintStart_toStartOf="@+id/imageView2"
        app:layout_constraintTop_toBottomOf="@+id/imageView2">

        <TextView
            style="@style/App.TextAppearence.Headline6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="6dp"
            android:text="@string/second_intro"
            android:textAlignment="center" />

        <TextView
            style="@style/App.TextAppearence.Body2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/third_intro"
            android:textAlignment="center" />
    </LinearLayout>

    <Button
        android:id="@+id/button_start"
        style="@style/App.Button.Primary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="46dp"
        android:text="@string/start_button"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2">
    </Button>

</androidx.constraintlayout.widget.ConstraintLayout>