<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.CountActivity">

    <include
        android:id="@+id/toolbar_count"
        layout="@layout/toolbar">

    </include>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        app:layout_constraintTop_toBottomOf="@id/toolbar_count"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:paddingHorizontal="16dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/linearLayout3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/card"
                android:orientation="vertical"
                android:padding="20dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:orientation="vertical">

                    <TextView
                        style="@style/App.TextAppearence.Headline6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="6dp"
                        android:text="@string/title_selling_purchase_price" />

                    <TextView
                        style="@style/App.TextAppearence.Body2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/subtitle_selling_purchase_price"></TextView>

                </LinearLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/txtInput_count_purchase_price"
                    style="@style/App.TextInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:hint="@string/label_purchase_price"
                    app:helperText="format : 80000">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_purchase_price"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/txtInput_count_selling_price"
                    style="@style/App.TextInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/label_selling_price"
                    app:helperText="format : 80000">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_selling_price"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="28dp"
                android:background="@drawable/card"
                android:orientation="vertical"
                android:padding="20dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:orientation="vertical">

                    <TextView
                        style="@style/App.TextAppearence.Headline6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="6dp"
                        android:text="@string/title_demand_probability" />

                    <TextView
                        style="@style/App.TextAppearence.Body2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/subtitle_demand_probability"></TextView>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:orientation="horizontal">

                    <TextView
                        style="@style/App.TextAppearence.Subtitle2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/label_quantity_demand" />

                    <EditText
                        android:id="@+id/et_quantity_demand"
                        style="@style/App.TextAppearence.Body2"
                        android:layout_width="40dp"
                        android:layout_height="35dp"
                        android:text="1"
                        android:textAlignment="center" />
                </LinearLayout>


                <LinearLayout
                    android:id="@+id/layout_all_field_demandProb"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rv_demandProb"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>

                </LinearLayout>


            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="100dp" />
        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:paddingHorizontal="16dp"
        android:background="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" >

        <Button
            android:layout_marginTop="6dp"
            android:id="@+id/button_count"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_count"
            />


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>